fix: address code review findings for knowledge graph module
- Add proxy path validation to prevent SSRF in OperationIntelligenceProxyService
- Warn when secret key is transmitted over plain HTTP
- Add per-ontology lock for atomic check-then-delete in KnowledgeGraphService
- Add defensive copies in model getters (GraphEntity, GraphSnapshot, etc.)
- Add equals/hashCode/toString to all model classes
- Add JavaDoc to inner classes (OperationIntelligenceProperties, InMemoryGraphStore)
- Add JavaDoc to GatewayProperties constructors and toString overrides
- Use toLowerCase(Locale.ROOT) instead of equalsIgnoreCase (G.TYP.08)
- Merge duplicate spring keys in config.yaml
- Fix List.of() NPE when envName variables are null
- Update InMemoryGraphStore callers to use setXxx() instead of getter mutation

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>